caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/missing_dict_value_type.caffeine
Blueprints
  "test" success_rate(x):
    Requiring { counts: Dict(String) }
    signals { value: "x" }
